# c-learning

./: .gitignore  CMakeLists.txt  README.md
2022/: CMakeLists.txt  check_is_leap_year.c  homework0.c  learn10.c  learn2.c  learn3.c  learn4.c  learn5.c  learn6.c  learn7.c  learn8.c  learn9.c  max.c  numbertest.c  sort.c
2023/: CMakeLists.txt  find_substring.c
2023/bintree/: CMakeLists.txt  bintree.h  main.c  single.c
2023/dijsktra/: CMakeLists.txt  input.txt  main.c
2023/graph/: CMakeLists.txt  input.txt  main.c  main_table.c
2023/graph_2/: CMakeLists.txt  input.txt  main.c
2023/huffman_2/: CMakeLists.txt  main.c
2023/huffmantree/: CMakeLists.txt  input.txt  main.c  vector.c  vector.h
2023/linked_list/: CMakeLists.txt  test1.c  test1.txt  test2.c  test3.c  test3.txt  test4.c  test4.txt  test5.c  test5.txt  test6.c  test6.txt
2023/queue/: CMakeLists.txt  main.c  queue.h
